cmake_minimum_required(VERSION 3.23)
project(cs142_homework_3)

set(CMAKE_CXX_STANDARD 17)

add_executable(question1 question1.cpp)
add_executable(question2 question2.cpp)
add_executable(question3 question3.cpp)
add_executable(question4 question4.cpp)
add_executable(question5 question5.cpp)
add_executable(question6 question6.cpp)
